gke/gateway/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  # Define the Service name
  name: gateway-service
  labels:
    app: gateway
spec:
  # Scans for Pods that match its selector
  selector:
    app: gateway
  # Exposes the Service on a cluster-internal IP. 
  # Hence, this Service is only reachable from within the cluster. 
  type: NodePort
  ports:
    - name: gateway-http
      port: 8080
      protocol: TCP
      targetPort: gateway-http
